@@ -1,4 +1,4 @@
-.\"	$NetBSD: boothowto.9,v 1.2 2009/09/05 11:32:36 wiz Exp $
+.\"	$NetBSD: boothowto.9,v 1.3 2009/09/11 18:14:58 apb Exp $
 .\"
 .\" Copyright (c) 2009 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -51,6 +51,10 @@ and
 .Dq Sy AB_ Ns No *
 symbols in
 .In sys/reboot.h .
+The value is made available via the
+.Xr sysctl 7
+variable
+.Va kern.boothowto .
 .Pp
 The
 .Dv BOOT_FLAG
@@ -254,6 +258,8 @@ This flag is currently not used by any ports.
 .Xr ddb 4 ,
 .\" RB_USERCONF
 .Xr userconf 4 ,
+.\" sysctl kern.boothowto
+.Xr sysctl 7
 .\" sets boothowto
 .Xr boot 8 ,
 .\" .Xr crash 8 ,
